# libdds

./: CMakeLists.txt  README
code/: dds_types.h  libdds.c  libdds.h  libdds_opengl.c  libdds_opengl.h
images/: fungus.dds
viewer/: main.c
